paryal58.github.io: Attempt to fix overlapping of windows in mobile

--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@ nav .fa{
         text-align: left;
         z-index: 2;
         transition: 0.7s;
+        z-index: 2;
     }
     nav .fa{
         display: block;
@@ -126,6 +127,7 @@ nav .fa{
         margin: 10px;
         font-size: 22px;
         cursor: pointer;
+        z-index: 2;
     }
     .nav .fa-solid{
         display: block;
@@ -241,6 +243,7 @@ p{
     height: 1300px;
     border: 1px solid #ccc;
     position: relative;
+    z-index: 1;
 }
 
 .location{
